Update status of the 3.3 branch. Originally by Kelley Cook <kcook34@ford.com>.

--- a/htdocs/gcc-3.3/index.html
+++ b/htdocs/gcc-3.3/index.html
@@ -9,8 +9,8 @@
 <h1>GCC 3.3</h1>
 
 <p>GCC 3.3 is the active release branch of GCC, currently in
-<a href="../develop.html#stage3">stage 3</a> of development.  A set
-of <a href="criteria.html">release criteria</a> define when this version
+<a href="http://gcc.gnu.org/ml/gcc/2003-04/msg01430.html">prerelease</a>.
+A set of <a href="criteria.html">release criteria</a> define when this version
 will be ready for release.</p>
 
 <p>GCC 3.3 will include numerous <a href="changes.html">new features,
