Add MacLeod to list of contributors.  Fix email address, link and indentation.

--- a/htdocs/projects/tree-ssa/index.html
+++ b/htdocs/projects/tree-ssa/index.html
@@ -33,7 +33,7 @@ needed when submitting patches from the branch onto the mainline.</p>
 
 <p>Current contributors to this project include 
 <a href="mailto:dberlin@dberlin.org">Daniel Berlin</a>,
-<a href="mailto:s.bosscher@student.tudelft.nl">Steven Bosscher</a>,
+<a href="mailto:steven@gcc.gnu.org">Steven Bosscher</a>,
 <a href="mailto:fche@redhat.com">Frank Eigler</a>,
 <a href="mailto:bje@redhat.com">Ben Elliston</a>,
 <a href="mailto:rth@redhat.com">Richard Henderson</a>,
@@ -41,6 +41,7 @@ needed when submitting patches from the branch onto the mainline.</p>
 <a href="mailto:aldyh@redhat.com">Aldy Hernandez</a>,
 <a href="mailto:aj@suse.de">Andreas Jaeger</a>,
 <a href="mailto:law@redhat.com">Jeff Law</a>,
+<a href="mailto:amacleod@redhat.com">Andrew MacLeod</a>,
 <a href="mailto:jason@redhat.com">Jason Merrill</a>,
 <a href="mailto:dnovillo@redhat.com">Diego Novillo</a>,
 <a href="mailto:s.pop@laposte.net">Sebastian Pop</a> and
@@ -49,10 +50,10 @@ needed when submitting patches from the branch onto the mainline.</p>
 <h3>Branch stability</h3>
 
 <p>While this is an experimental branch and people are encouraged to
-add new features to it, default bootstraps and c-torture tests
-<em>must always work</em> before a patch is allowed in the branch.  If
-you want to contribute a new feature that is still not complete, you
-should:</p>
+add new features to it, default bootstraps and regression tests for
+the front ends using the tree-ssa framework <em>must always work</em>
+before a patch is allowed in the branch.  If you want to contribute
+a new feature that is still not complete, you should:</p>
 
 <ol>
 <li>Add a new <code>-f</code> flag to enable your code.</li>
@@ -71,8 +72,8 @@ algorithm from.  If it's your own research work, include a
 Technical Report, Thesis or Paper reference for it.</p>
 
 <p>There are regular mainline merges about 3 or 4 times a month.  The
-latest merge tag is always added to GCC's version string.  A merge may be
-postponed if there is major breakage in mainline.</p>
+latest merge tag is always added to GCC's version string.  A merge may
+be postponed if there is major breakage in mainline.</p>
 
 <p>Work from the branch will be incorporated into mainline only
 when we can prove improvements in code quality and/or compile
@@ -164,7 +165,7 @@ in GIMPLE form are defined in <code>tree-simple.[ch]</code>.</p>
 <p>Having trees in GIMPLE form enables language-independent analysis
 and transformation passes.  Currently, we are implementing an SSA pass
 based on the algorithms described by Cytron <em>et. al.</em>
-[<a href="#cryton-91">1</a>].</p>
+[<a href="#cytron-91">1</a>].</p>
 
 <p>The graph below describes the process:</p>
 
