Change the anchor text for the link to obsoleted systems.

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -23,9 +23,9 @@
 
     <li>Support for all the systems <a
         href="../gcc-3.1/changes.html#obsolete_systems">obsoleted in
-        GCC 3.1</a> has been removed from GCC 3.3.  See <a
-        href="#obsolete_systems">below</a> for a list of systems which
-        are obsoleted in this release.</li>
+        GCC 3.1</a> has been removed from GCC 3.3.  See below for a
+        <a href="#obsolete_systems">list of systems which are obsoleted
+        in this release</a>.</li>
 
     <li>Checking for null format arguments has been decoupled from
 	the rest of the format checking mechanism.  Programs which
