Do no longer describe additional files that contained the version number on pre-3.3 branches.

--- a/htdocs/releasing.html
+++ b/htdocs/releasing.html
@@ -72,11 +72,7 @@ FSF.</li>
 
 <li>Increment the version number in <code>gcc/version.c</code>, and
 put back the date stamp and (prerelease) annotation.  Increment the
-version number in <code>doc/include/gcc-common.texi</code>.  (Branches
-cut prior to GCC 3.3 have the version number stored in more
-places.  You must edit all the files named <code>[vV]ersion.c</code>
-as well, and <code>java/gcj.texi</code>, <code>f/root.texi</code>, and
-<code>gcc/ada/gnatvsn.ads</code>.)</li>
+version number in <code>doc/include/gcc-common.texi</code>.</li>
 
 <li>Create a new version in Bugzilla corresponding to the new branch
 version.  This can be accomplished by choosing products, choosing gcc,
