* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -8,7 +8,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2003-05-05.
+2003-05-07.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -45,7 +45,6 @@ differences are currently required.</p>
 <tr> <td>java.io.DataOutputStream</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.DataOutputStream.diff">Diff</a></td> </tr>
 <tr> <td>java.io.File</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
 <tr> <td>java.io.FileDescriptor</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.io.FileInputStream</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.FileInputStream.diff">Diff</a></td> </tr>
 <tr> <td>java.io.FileOutputStream</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.FileOutputStream.diff">Diff</a></td> </tr>
 <tr> <td>java.io.InputStreamReader</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.InputStreamReader.diff">Diff</a></td> </tr>
 <tr> <td>java.io.LineNumberReader</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.LineNumberReader.diff">Diff</a></td> </tr>
@@ -81,6 +80,7 @@ differences are currently required.</p>
 <tr> <td>java.net.InetAddress</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.InetAddress.diff">Diff</a></td> </tr>
 <tr> <td>java.net.JarURLConnection</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.JarURLConnection.diff">Diff</a></td> </tr>
 <tr> <td>java.net.MimeTypeMapper</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
+<tr> <td>java.net.NetworkInterface</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.NetworkInterface.diff">Diff</a></td> </tr>
 <tr> <td>java.net.PlainDatagramSocketImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.PlainDatagramSocketImpl.diff">Diff</a></td> </tr>
 <tr> <td>java.net.PlainSocketImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.PlainSocketImpl.diff">Diff</a></td> </tr>
 <tr> <td>java.net.SocketInputStream</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
@@ -95,10 +95,6 @@ differences are currently required.</p>
 <tr> <td>java.nio.LongBuffer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.LongBuffer.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.MappedByteBuffer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.MappedByteBuffer.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.ShortBuffer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.ShortBuffer.diff">Diff</a></td> </tr>
-<tr> <td>java.security.Key</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.Key.diff">Diff</a></td> </tr>
-<tr> <td>java.security.PrivateKey</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.PrivateKey.diff">Diff</a></td> </tr>
-<tr> <td>java.security.Provider</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.Provider.diff">Diff</a></td> </tr>
-<tr> <td>java.security.PublicKey</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.PublicKey.diff">Diff</a></td> </tr>
 <tr> <td>java.security.cert.Certificate</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.cert.Certificate.diff">Diff</a></td> </tr>
 <tr> <td>java.security.cert.PKIXCertPathBuilderResult</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.cert.PKIXCertPathBuilderResult.diff">Diff</a></td> </tr>
 <tr> <td>java.security.cert.X509Certificate</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.cert.X509Certificate.diff">Diff</a></td> </tr>
