--- a/htdocs/bugs/minimize.html
+++ b/htdocs/bugs/minimize.html
@@ -42,7 +42,7 @@ method of minimizing a large test case:</p>
   function (e.g., <code>printf</code>), specify the function's
   declaration directly rather than including a header file.</li>
 
-  <li>For subspected bugs in a GCC runtime library, write a small test case that
+  <li>For suspected bugs in a GCC runtime library, write a small test case that
   calls that function, either directly or indirectly, with the arguments
   that cause it to fail.  It's OK to include header files that are part
   of the GCC release.</li>
