--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -401,7 +401,7 @@ named <code>libiconv</code>, even though it is a different
 library.</p>
 
 <p>Using <code>--disable-nls</code> at configure-time does not
-prevent-- this problem because <code>jc1</code> uses
+prevent this problem because <code>jc1</code> uses
 <code>iconv</code> even in that case.  Solutions including temporarily
 removing the GNU <code>libiconv</code>, coying it to a default
 location such as <code>/usr/llib</code>, and by using
