--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -404,7 +404,7 @@ library.</p>
 prevent this problem because <code>jc1</code> uses
 <code>iconv</code> even in that case.  Solutions including temporarily
 removing the GNU <code>libiconv</code>, coying it to a default
-location such as <code>/usr/llib</code>, and by using
+location such as <code>/usr/lib</code>, and by using
 <code>--enable-languages</code> at configure-time to disable Java.</p>
 
 <hr />
