Fix broken sentence. Add remark on class hierarchies when stripping down testcases.

--- a/htdocs/bugs/minimize.html
+++ b/htdocs/bugs/minimize.html
@@ -102,11 +102,14 @@ Try the following, backing up from the unsuccessful attempts.</p>
 
   <li>Move includes of system headers before other headers.</li>
 
-  <li>Remove <code>#include</code> directives, or replace them with
-  only the code the included file to compile the main file.</li>
+  <li>Remove <code>#include</code> directives, or replace them with only the
+  code that is needed from the included file to compile the main file.</li>
 
   <li>Replace C++ templates with regular functions and classes, or
   get rid of as many template arguments as possible.</li>
+
+  <li>Simplify class hierarchies: Remove base classes, or use base classes
+  instead of derived ones.</li>
 
   <li>Iterate through the following:
     <ul>
