--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -57,6 +57,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>alphaev56-dec-osf4.0d</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-05/msg00887.html">3.2.3</a></td>
+</tr>
+
+<tr>
 <td>alphaev56-unknown-linux-gnu</td>
 <td>Red Hat 7.1, glibc 2.2.3, kernel 2.4.3</td>
 <td>Successful (C, C++, Obj-C):
@@ -699,6 +706,14 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 9, glibc 2.3.2</td>
+<td>Successful (C, Ada; with patch):
+<a href=http://gcc.gnu.org/ml/gcc/2003-04/msg01332.html>3.2.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>SCO OpenLinux, kernel 2.4.13</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2003-04/msg01113.html">3.2.2</a></td>
@@ -918,6 +933,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Successful (with patch):
 <a href="http://gcc.gnu.org/ml/gcc/2002-10/msg01649.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>powerpc-apple-darwin5.5</td>
+<td>Mac OS X 10.1.5</td>
+<td>Successful (with patch):
+<a href="http://gcc.gnu.org/ml/gcc/2003-05/msg00228.html">3.2</a></td>
 </tr>
 
 <tr>
