Fix the inevitable formatting problem from the previous commit.

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -708,7 +708,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>Red Hat 9, glibc 2.3.2</td>
 <td>Successful (C, Ada; with patch):
-<a href=http://gcc.gnu.org/ml/gcc/2003-04/msg01332.html>3.2.3</a>
+<a href="http://gcc.gnu.org/ml/gcc/2003-04/msg01332.html">3.2.3</a>
 </td>
 </tr>
 
