--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -19,7 +19,7 @@ is in our repository or our <a href="#wwwdocs">web pages</a>.</p>
 <p>In addition, you can browse our CVS history online at</p>
 
 <ul>
-  <li><a href="http://subversions.gnu.org/cgi-bin/viewcvs/gcc/">subversions.gnu.org</a>
+  <li><a href="http://savannah.gnu.org/cgi-bin/viewcvs/gcc/">savannah.gnu.org</a>
       using viewcvs, or</li>
   <li><a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/">gcc.gnu.org</a>
       using cvsweb.</li>
