Update URL for libg++. Compress description and move it into the Museum section.

--- a/htdocs/extensions.html
+++ b/htdocs/extensions.html
@@ -21,15 +21,6 @@ Architecture: A Quantitative Approach by Hennessy and Patterson.</p>
 architecture.</p>
 
 
-<h2><a name="libgxx"></a><a href="http://people.redhat.com/manfredh/libgxx/">Libg++</a></h2>
-
-<p><code>Libg++</code>, the GNU C++ library, is an attempt to
-provide a variety of C++ programming tools and other support to
-GNU C++ programmers.  It has been available for quite some time
-now, and, although it has been superseded by <code>libstdc++</code>,
-it is still providing some useful services. And, it has proven to
-be a good testsuite for the compiler...</p>
-
 <h2>
 Bounds checking patches for
 <a href="http://web.inter.NL.net/hcc/Haj.Ten.Brugge/">GCC releases</a>
@@ -91,6 +82,11 @@ be helpful to consult for future development.</p>
 tools for the TMS340x0</a></h2>
 
 <p>A GCC port to a <em>bit-addressable</em> architecture.</p>
+
+<h2><a name="libgxx"></a><a href="http://manfred-h.bei.t-online.de/libgxx/">Libg++</a></h2>
+
+<p><code>Libg++</code>, the GNU C++ library, has been superseded by
+<code>libstdc++</code>.</p>
 
 <h2><a href="http://www.goof.com/pcg/index.html">PentiumGCC</a></h2>
 
