Add an anchor for #bugreport and a comment explaining why. Make the "commercial" option the last one in "How do I get a bug fixed or a feature added?". Also avoid explicitly refer mentioning GNATS and avoid a duplicate link.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -164,36 +164,37 @@ than we've had before.</p>
 </blockquote>
 
 <hr />
-<h2><a name="support">How do I get a bug fixed or a feature added?</a></h2>
+<!-- The "bugreport" anchor was used in ICE messages of GCC < 2.95.3. -->
+<h2><a name="support"><a name="bugreport">How do I get a bug fixed or
+    a feature added?</a></a></h2>
 
 <p>There are lots of ways to get something fixed.  The list below may be
 incomplete, but it covers many of the common cases.  These are listed
-roughly in order of increasing difficulty for the average GCC user,
+roughly in order of decreasing difficulty for the average GCC user,
 meaning someone who is not skilled in the internals of GCC, and where
 difficulty is measured in terms of the time required to fix the bug.
 No alternative is better than any other; each has its benefits and
 disadvantages.</p>
 
 <ul>
-<li>Hire someone to fix it for you.  There are various companies and
-    individuals providing support for GCC.  This alternative costs
-    money, but is relatively likely to get results.</li>
+<li>Fix it yourself.  This alternative will probably bring results,
+    if you work hard enough, but will probably take a lot of time,
+    and, depending on the quality of your work and the perceived
+    benefits of your changes, your code may or may not ever make it
+    into an official release of GCC.</li>
 
-<li><a href="bugs.html">Report the problem to the GCC GNATS bug tracking system</a>
+<li><a href="bugs.html">Report the problem to the GCC bug tracking system</a>
     and hope that someone will be kind
     enough to fix it for you.  While this is certainly possible, and
     often happens, there is no guarantee that it will.  You should
     not expect the same response from this method that you would see
     from a commercial support organization since the people who read
     GCC bug reports, if they choose to help you, will be volunteering their
-    time.  This alternative will work best if you follow the directions
-    on <a href="bugs.html">submitting bugreports</a>.</li>
+    time.</li>
 
-<li>Fix it yourself.  This alternative will probably bring results,
-    if you work hard enough, but will probably take a lot of time,
-    and, depending on the quality of your work and the perceived
-    benefits of your changes, your code may or may not ever make it
-    into an official release of GCC.</li>
+<li>Hire someone to fix it for you.  There are various companies and
+    individuals providing support for GCC.  This alternative costs
+    money, but is relatively likely to get results.</li>
 </ul>
 
 <hr />
