Do not link to main pages of companies (unless they provide free software exclusively) as requested by RMS.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -51,7 +51,7 @@ names.
 
 <ul>
  <li>alpha
-   <br />Manufacturer: <a href="http://www.compaq.com">Compaq (DEC)</a>  
+   <br />Manufacturer: Compaq (DEC)
    <br />The <a href="ftp://ftp.digital.com/pub/Digital/info/semiconductor/literature/dsc-library.html">Alpha
   OEM Documentation Library</a> offers the Alpha Architecture
   Handbook, chip hardware manuals, and info on associated core logic
@@ -62,64 +62,64 @@ names.
  </li>
 
  <li>arc
-  <br />Manufacturer: <a href="http://www.arc.com">ARC Cores (Argonaut)</a>
+  <br />Manufacturer: ARC Cores (Argonaut)
  </li>
 
  <li>arm (armv2, thumb)
-  <br />Manufacturer: Various, by licence from <a href="http://www.arm.com">ARM</a>
+  <br />Manufacturer: Various, by licence from ARM
   <br />CPUs include: ARM7 and ARM7T series (eg. ARM7TDMI), ARM9 and StrongARM
   <br /><a href="http://www.arm.com/Documentation/">ARM Documentation</a>
  </li>
  
  <li>AVR
-  <br />Manufacturer: <a href="http://www.atmel.com/atmel/">Atmel</a>
+  <br />Manufacturer: Atmel
   <br /><a href="http://www.atmel.com/atmel/products/prod23.htm">AVR Documentation</a>
  </li>
  
  <li>c4x
-   <br />Manufacturer: <a href="http://www.ti.com">Texas Instruments</a>
+   <br />Manufacturer: Texas Instruments
    <br />Exact chip name: TMS320C4X
    <br /><a href="http://www.ti.com/sc/docs/psheets/man_dsp.htm">DSP Manuals</a>
  </li>
  
  <li>CRIS
-   <br />Manufacturer: <a href="http://www.axis.com/">Axis Communications</a>
+   <br />Manufacturer: Axis Communications
    <br />Acronym stands for: Code Reduced Instruction Set
    <br />The CRIS architecture is used in the ETRAX system-on-a-chip series.
    <br /><a href="http://developer.axis.com/">Site with CPU documentation</a>
  </li>
  
  <li>d30v
-  <br />Manufacturer: <a href="http://www.mitsubishichips.com/">Mitsubishi</a>
+  <br />Manufacturer: Mitsubishi
   <br />There is no longer any reference to this chip anywhere on the 
       manufacturer's web site; it may be dead.
   <br />GDB includes a simulator.
  </li>
  
  <li>dsp16xx
-   <br />Manufacturer: <a href="http://www.att.com">AT&amp;T</a>
+   <br />Manufacturer: AT&amp;T
  </li>
  
  <li>fr30
-   <br />Manufacturer: <a href="http://www.fmap.com.sg/">Fujitsu</a>
+   <br />Manufacturer: Fujitsu
    <br />Acronym stands for: Fujitsu RISC
    <br />GDB includes a <a href="http://sources.redhat.com/cgen/">CGEN</a>
    generated simulator.
  </li>
  
  <li>h8300
-   <br />Manufacturer: <a href="http://www.hitachi.com/">Hitachi</a>
+   <br />Manufacturer: Hitachi
    <br />Exact chip name: H8/300
    <br />GDB includes a simulator.
  </li>
  
  <li>i370
-   <br />Manufacturer: <a href="http://www.ibm.com">IBM</a>
+   <br />Manufacturer: IBM
    <br /><a href="http://www-1.ibm.com/servers/eserver/zseries/">S/390 Home Page</a>
  </li>
  
  <li>i386 (i486, i586, i686, i786)
-   <br />Manufacturer: <a href="http://www.intel.com">Intel</a>
+   <br />Manufacturer: Intel
 
   <br /><a href="http://developer.intel.com/design/litcentr/index.htm">Intel
    Pentium design info</a>
@@ -138,19 +138,19 @@ names.
  </li>
  
  <li>i960
-   <br />Manufacturer: <a href="http://www.intel.com">Intel</a>
+   <br />Manufacturer: Intel
    <br /><a href="http://www.intel.com/design/i960/">i960 home page</a>
    <br />GDB includes a simulator.
  </li>
  
  <li>m32r
-  <br />Manufacturer: <a href="http://www.mitsubishichips.com/">Mitsubishi</a>
+  <br />Manufacturer: Mitsubishi
   <br /><a href="http://www.mitsubishichips.com/products/mcu/products/32-bit/index.html">M32R/D Site</a>
   <br />GDB includes a CGEN generated simulator.
  </li>
  
  <li>m68hc11 (m68hc12)
-  <br />Manufacturer: <a href="http://www.motorola.com/">Motorola</a>
+  <br />Manufacturer: Motorola
   <br /><a href="http://www.motorola.com/mcu/">68HC11/68HC12 documentation</a>
   <br /><a href="http://www.gnu-m68hc11.org/">http://www.gnu-m68hc11.org</a>
   GNU Development Chain for 68HC11 and 68HC12.
@@ -158,15 +158,15 @@ names.
  </li>
  
  <li>m68k
-  <br />Manufacturer: <a href="http://www.motorola.com">Motorola</a>
+  <br />Manufacturer: Motorola
  </li>
  
  <li>m88k
-  <br />Manufacturer: <a href="http://www.motorola.com">Motorola</a>
+  <br />Manufacturer: Motorola
  </li>
  
  <li>mcore
-  <br />Manufacturer: <a href="http://www.motorola.com">Motorola</a>
+  <br />Manufacturer: Motorola
   <br /><a href="http://www.motorola.com/SPS/MCORE/">M-CORE home page</a>
   <br />GDB includes a simulator.
  </li>
@@ -198,23 +198,23 @@ names.
  </li>
  
  <li>mn10200
-  <br />Manufacturer: <a href="http://www.psdc.com/">Matsushita</a>
+  <br />Manufacturer: Matsushita
   <br />GDB includes a simulator.
  </li>
  
  <li>mn10300
-  <br />Manufacturer: <a href="http://www.psdc.com/">Matsushita</a>
+  <br />Manufacturer: Matsushita
   <br />Alternate chip name: AM30
   <br />GDB includes a simulator.
  </li>
  
  <li>ns32k
-  <br />Manufacturer: <a href="http://www.national.com">National Semiconductor</a>
+  <br />Manufacturer: National Semiconductor
   <br /><a href="http://www.national.com/pf/NS/NS32FX200.html">NS32FX200 Home Page</a>
  </li>
  
  <li>pa (hppa1.0, hppa1.1, hppa2.0)
-  <br />Manufacturer: <a href="http://www.hp.com">HP</a>
+  <br />Manufacturer: HP
   <br /><a href="http://www.cpus.hp.com/technical_references/parisc.shtml">PA-RISC</a>
   is preferred over the older HPPA acronym
   (Hewlett-Packard Precision Architecture).
@@ -222,53 +222,52 @@ names.
   
 
  <li>pdp11
-  <br />Manufacturer: <a href="http://www.dec.com">DEC (Compaq)</a>
+  <br />Manufacturer: DEC
   <br /><a href="http://www.village.org/pdp11/faq.html">PDP-11 FAQ</a>
   <br /><a href="http://simh.trailing-edge.com/">Simulators</a>
  </li>
  
  <li>romp
-  <br />Manufacturer: <a href="http://www.ibm.com">IBM</a>
+  <br />Manufacturer: IBM
   <br />Acronym stands for: Research/Office Products MicroProcessor
   <br />The ROMP was the processor inside the IBM PC/RT.
   <br /><a href="http://FAQs.jmas.co.jp/FAQs/ibm-rt-faq/hardware">PC/RT hardware FAQ</a>
  </li>
  
  <li>rs6000 (powerpc, powerpcle)
-  <br />Manufacturer: <a href="http://www.ibm.com">IBM</a>,
-       <a href="http://www.motorola.com/">Motorola</a>
+  <br />Manufacturer: IBM, Motorola
   <br /><a href="http://publib.boulder.ibm.com/doc_link/en_US/a_doc_lib/aixassem/alangref/toc.htm">AIX V4.3 Assembler Language Ref.</a>
   <br /><a href="http://publibn.boulder.ibm.com/doc_link/en_US/a_doc_lib/aixassem/alangref/alangreftfrm.htm">AIX 5L Assembler Language Ref.</a>
  </li>
  
  <li>sh
-  <br />Manufacturer: <a href="http://www.hitachi.com">Hitachi</a>
+  <br />Manufacturer: Hitachi
   <br />Exact chip name: SuperH
   <br /><a href="http://www.superh.com/">SuperH Home Page</a>
   <br />GDB includes a simulator.
  </li>
  
  <li>sparc (sparclite, sparc64)
-  <br />Manufacturer: <a href="http://www.sun.com">Sun</a>
+  <br />Manufacturer: Sun
   <br />Acronym stands for: Scalable Processor ARChitecture
   <br /><a href="http://www.sun.com/microelectronics/manuals/index.html">
   SPARC manuals</a>
  </li>
  
  <li>v850
-  <br />Manufacturer: <a href="http://www.nec.com">NEC</a>
+  <br />Manufacturer: NEC
  </li>
  
  <li>vax
-  <br />Manufacturer: <a href="http://www.dec.com">DEC (Compaq)</a>
+  <br />Manufacturer: DEC
  </li>
  
  <li>xtensa
-  <br />Manufacturer: <a href="http://www.tensilica.com">Tensilica</a>
+  <br />Manufacturer: Tensilica
  </li>
 
  <li>z/Architecture (S/390)
-  <br />Manufacturer: <a href="http://www.ibm.com">IBM</a>
+  <br />Manufacturer: IBM
   <br /><a href="http://www-1.ibm.com/servers/s390/os390/bkserv/latest/z_arch.html">z/Architecture Principles of Operation</a></li>
 
 </ul>
@@ -514,16 +513,16 @@ Below is the list of ports that GCC used to support.
   </li>
 
   <li>a29k
-  <br />Manufacturer: <a href="http://www.amd.com">AMD</a>
+  <br />Manufacturer: AMD
   </li>
 
   <li>clipper
-  <br />Manufacturer: <a href="http://www.intergraph.com/">Intergraph</a>
+  <br />Manufacturer: Intergraph
   <br />Exact machine name: CLIPPER
   </li>
 
   <li>convex (c1, c2, c3[248])
-  <br />Manufacturer: <a href="http://www.convex.com/">Convex (HP)</a>
+  <br />Manufacturer: Convex (HP)
   </li>
 
   <li>elxsi
@@ -533,16 +532,16 @@ Below is the list of ports that GCC used to support.
   </li>
 
   <li>i860
-  <br />Manufacturer: <a href="http://www.intel.com">Intel</a>
+  <br />Manufacturer: Intel
   </li>
  
   <li>pj (picoJava)
-  <br />Manufacturer: <a href="http://www.sun.com/">Sun</a>
+  <br />Manufacturer: Sun
   <br /><a href="http://www.sun.com/microelectronics/picoJava/">picoJava</a>
   </li>
 
   <li>we32k
-  <br />Manufacturer: <a href="http://www.att.com">AT&amp;T</a>
+  <br />Manufacturer: AT&amp;T
   <br /><a href="http://www.unixwiz.net/3b2/3b2faq.html">AT&amp;T 3B2 FAQ</a>
   </li>
  
