--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -159,14 +159,14 @@ than we've had before.</p>
   past few months.  The paper which started all of this introduced two
   terms:  A <b>cathedral</b> development model versus a <b>bazaar</b>
   development model.  The paper is written by Eric S. Raymond, it is
-  called ``The Cathedral and the Bazaar</a>''.
+  called ``The Cathedral and the Bazaar''.
   The paper is a useful starting point for discussions.
 </blockquote>
 
 <hr />
 <!-- The "bugreport" anchor was used in ICE messages of GCC < 2.95.3. -->
-<h2><a name="support"><a name="bugreport">How do I get a bug fixed or
-    a feature added?</a></a></h2>
+<h2 id="bugreport"><a name="support">How do I get a bug fixed or
+    a feature added?</a></h2>
 
 <p>There are lots of ways to get something fixed.  The list below may be
 incomplete, but it covers many of the common cases.  These are listed
@@ -379,7 +379,7 @@ test the <code>-fssa</code> option, you could bootstrap like this:</p>
 <pre>make BOOT_CFLAGS="-O2 -fssa" bootstrap</pre>
 
 <hr />
-<h2><a name="iconv">Why does <code>libiconv</code> get linked into <code>jc1</code> on Solaris?</h2>
+<h2><a name="iconv">Why does <code>libiconv</code> get linked into <code>jc1</code> on Solaris?</a></h2>
 
 <p>The Java front end requires <code>iconv</code>.  If the compiler
 used to bootstrap GCC finds <code>libiconv</code> (because the GNU
