Fix typos in "Why does libiconv get linked into jc1 on Solaris?".

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -395,9 +395,9 @@ library.</p>
 
 <p>Using <code>--disable-nls</code> at configure-time does not
 prevent this problem because <code>jc1</code> uses
-<code>iconv</code> even in that case.  Solutions including temporarily
-removing the GNU <code>libiconv</code>, coying it to a default
-location such as <code>/usr/lib</code>, and by using
+<code>iconv</code> even in that case.  Solutions include temporarily
+removing the GNU <code>libiconv</code>, copying it to a default
+location such as <code>/usr/lib/</code>, and using
 <code>--enable-languages</code> at configure-time to disable Java.</p>
 
 <hr />
