--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -55,6 +55,7 @@ sites</a>.</p>
 <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/gcc.gnu.org/pub/gcc/">sunsite.doc.ic.ac.uk</a></li>
 <li>US (Virginia): <a href="ftp://mirrors.rcn.net/pub/sourceware/gcc/">mirrors.rcn.net</a> (also available via <a href="http://mirrors.rcn.net/pub/sourceware/gcc/">http</a>)</li>
 <li>US (St. Louis, releases only): <a href="ftp://mirrors.laffeycomputer.com/pub/sourceware.cygnus.com/pub/gcc/releases/">mirrors.laffeycomputer.com</a>, thanks to mirrormaster at laffey dot biz</li>
+<li>US (Austin, Texas): <a href="http://www.binarycode.org/gcc/">http://www.binarycode.org/gcc/</a></li>
 
 </ul>
 
@@ -62,21 +63,6 @@ sites</a>.</p>
 <a href="mailto:gcc@gcc.gnu.org">gcc@gcc.gnu.org</a>.  Include the
 name of the server, the path to the GCC mirror and the country/city
 where the mirror is located.</p>
-
-<!-- <li>US (Merrifield, VA): <a href="ftp://mirrors.rcn.com:/pub/egcs/">mirrors.rcn.com</a>! !-->
-<!-- <li><a href="ftp://linux.colba.net/pub/pcg/egcs/">CANADA: linux.colba.net (Montreal) (snapshots only)</a>, thanks to <a href="mailto:draggy@kosmic.org">Nicolas St-Pierre</a>!<br /> !-->
-<!-- <li><a href="ftp://linux.cis.nctu.edu.tw/pub/packages/pcg/egcs/">TAIWAN: linux.cis.nctu.edu.tw</a>, thanks to <a href="http://www.cis.nctu.edu.tw/~is83120/">Aiken Sam</a>!<br />! !-->
-<!-- <li>Japan: <a href="ftp://ftp.win.or.jp/pub/lang/egcs">ftp.win.or.jp</a> !-->
-<!-- <li>Russia (Moscow, partial):<a href="ftp://kiarchive.relcom.ru/pub/gnu/egcs/">kiarchive.relcom.ru</a> !-->
-<!-- <li>US (Stanford): <a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/">go.cygnus.com</a> !-->
-<!-- <li>Japan (Tokyo): <a href="ftp://ring.asahi-net.or.jp/pub/lang/egcs">ring.asahi-net.or.jp</a> !-->
-<!--<li>Japan (Tokyo): <a href="ftp://ring.so-net.ne.jp/pub/lang/egcs">ring.so-net.ne.jp</a>  !-->
-<!-- <li>Japan: <a href="ftp://ring.jah.ne.jp/pub/lang/egcs">ring.jah.ne.jp</a> !-->
-<!-- <li>Japan: <a href="ftp://ring.astem.or.jp/pub/lang/egcs">ring.astem.or.jp</a> !-->
-<!-- <li>Japan: <a href="ftp://ring.saitama-u.ac.jp/pub/lang/egcs">ring.saitama-u.ac.jp</a> !-->
-<!-- <li>Japan: <a href="ftp://ring.nacsis.ac.jp/pub/lang/egcs">ring.nacsis.ac.jp</a> !-->
-<!-- <li>Japan: <a href="ftp://ring.exp.fujixerox.co.jp/pub/lang/egcs">ring.exp.fujixerox.co.jp</a> !-->
-<!-- <li>Japan: <a href="ftp://ring.ip-kyoto.ad.jp/pub/lang/egcs">ring.ip-kyoto.ad.jp</a> !-->
 
 </body>
 </html>
