Update some mirror sites.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -25,7 +25,7 @@ sites</a>.</p>
 <li>Brasil (releases only, no snapshots): <a href="ftp://ftp.softaplic.com.br/pub/sourceware/gcc/">ftp.softaplic.com.br</a></li>
 <li>China (Hong Kong): <a href="ftp://ftp.foruto.com/pub/gcc.gnu.org/gcc/">ftp.foruto.com</a>, thanks to Simon Szeto (sysop at foruto dot com)</li>
 <li>Czech Republic: <a href="ftp://sunsite.mff.cuni.cz/GNU/gcc/">sunsite.mff.cuni.cz</a></li>
-<li>Finland: <a href="ftp://ftp.funet.fi/pub/mirrors/sourceware.cygnus.com/pub/gcc/">ftp.funet.fi</a></li>
+<li>Finland: <a href="ftp://ftp.funet.fi/pub/mirrors/gcc.gnu.org/pub/gcc/">ftp.funet.fi</a></li>
 <li>France (releases only, no snapshots): <a href="ftp://ftp.ilog.fr/pub/Mirrors/gcc/">ftp.ilog.fr</a></li>
 <li>France (releases only, no snapshots): <a href="ftp://ftp.lip6.fr/pub/gcc/">ftp.lip6.fr</a>, thanks to ftpmaint at lip6 dot fr</li>
 <li>France (Brittany): <a href="ftp://ftp.irisa.fr/pub/mirrors/gcc.gnu.org/gcc/">ftp.irisa.fr</a>, thanks to ftpmaint at irisa dot fr</li>
@@ -54,8 +54,8 @@ sites</a>.</p>
 <li>UK: <a href="ftp://ftp.mirror.ac.uk/sites/sources.redhat.com/pub/gcc/">ftp.mirror.ac.uk</a>, thanks to mirror at mirror dot ac dot uk</li>
 <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/gcc.gnu.org/pub/gcc/">sunsite.doc.ic.ac.uk</a></li>
 <li>US (Virginia): <a href="ftp://mirrors.rcn.net/pub/sourceware/gcc/">mirrors.rcn.net</a> (also available via <a href="http://mirrors.rcn.net/pub/sourceware/gcc/">http</a>)</li>
-<li>US (St. Louis, releases only): <a href="ftp://mirrors.laffeycomputer.com/pub/sourceware.cygnus.com/pub/gcc/releases/">mirrors.laffeycomputer.com</a>, thanks to mirrormaster at laffey dot biz</li>
-<li>US (Austin, Texas): <a href="http://www.binarycode.org/gcc/">http://www.binarycode.org/gcc/</a></li>
+<li>US (St. Louis, releases only): <a href="ftp://mirrors.laffeycomputer.com/pub/gcc.gnu.org/pub/gcc/">mirrors.laffeycomputer.com</a>, thanks to mirrormaster at laffey dot biz</li>
+<li>US (Austin, Texas): <a href="http://www.binarycode.org/gcc/">www.binarycode.org</a></li>
 
 </ul>
 
