Mention GCC 3.3 release.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -38,6 +38,7 @@ to maintain and improve quality.</p>
      and fourth.
 -->
 
+<!--
 <dl>
 <dt><strong>Active release branch:</strong>
   will become <a href="gcc-3.3/index.html">GCC 3.3</a>
@@ -46,22 +47,20 @@ to maintain and improve quality.</p>
   <a href="http://gcc.gnu.org/ml/gcc/2003-04/msg01430.html">approval by
   the release manager</a>.
 </dd>
+-->
 
 <dt><strong>Current release series:</strong>
+  <a href="gcc-3.3/">GCC 3.3</a> (released 2003-05-14)
+</dt><dd>
+  The branch is open for regression fixes only.
+</dd>
+
+<dt><strong>Previous release series:</strong>
   <a href="gcc-3.2/">GCC 3.2.3</a> (released 2003-04-25)
 </dt><dd>
   This is the last release from the 3.2.x series.
   The branch has been closed after the release.
 </dd>
-
-<!--
-<dt><strong>Previous release series:</strong>
-  <a href="gcc-3.1/">GCC 3.1.1</a> (released 2002-07-26) 
-</dt><dd>
-  GCC 3.1.1 is the last 3.1 release; the 3.1-branch became the
-  <a href="gcc-3.2/changes.html">GCC 3.2</a>-branch.
-</dd>
--->
 
 <dt><strong>Active development (mainline):</strong>
   will become <a href="gcc-3.4/changes.html">GCC 3.4</a>
@@ -88,6 +87,11 @@ The summit takes place May 25-27, 2003 in Ottawa.
 <h2>News/Announcements</h2>
 
 <dl>
+
+<dt><b>May 14, 2003</b></dt>
+<dd>
+<a href="gcc-3.3/">GCC 3.3</a> has been released.
+</dd>
 
 <dt><b>April 25, 2003</b></dt>
 <dd>
