--- a/htdocs/gcc-3.3/index.html
+++ b/htdocs/gcc-3.3/index.html
@@ -8,24 +8,49 @@
 
 <h1>GCC 3.3</h1>
 
-<p>GCC 3.3 is the active release branch of GCC, currently in
-<a href="http://gcc.gnu.org/ml/gcc/2003-04/msg01430.html">prerelease</a>.
-A set of <a href="criteria.html">release criteria</a> define when this version
-will be ready for release.</p>
+<p>May 14, 2003</p>
 
-<p>GCC 3.3 will include numerous <a href="changes.html">new features,
-improvements, bug fixes, and other changes</a>, thanks to an
-<a href="http://gcc.gnu.org/onlinedocs/gcc/Contributors.html">amazing
+<p>The <a href="http://www.gnu.org">GNU project</a> and the GCC
+developers are pleased to announce the release of GCC 3.3.</p>
+
+<p>GCC 3.3 includes numerous <a href="changes.html">new features,
+improvements, bug fixes, and other changes</a>, thanks to an <a
+href="http://gcc.gnu.org/onlinedocs/gcc/Contributors.html">amazing
 group of volunteers</a>.</p>
 
 <p><a href="gcj-status.html">GCJ 3.3 status</a> is tracked for a
 variety of targets and test packages.</p>
 
-<p>GCC, the GNU Compiler Collection, is part of the
-<a href="http://www.gnu.org/">GNU project</a>.
-For additional information about GCC please refer to the
+<h2>Release History</h2>
+
+<dl>
+<dt>GCC 3.3</dt>
+<dd><a name="3.3">May 14, 2003</a>
+    (<a href="changes.html">changes</a>)
+</dd>
+
+<h2>References and Acknowledgements</h2>
+
+<p>GCC used to stand for the GNU C Compiler, but since the compiler
+supports several other languages aside from C, it now stands for the
+GNU Compiler Collection.</p>
+
+<p>A list of <a href="buildstat.html">successful builds</a> is updated
+as new information becomes available.</p>
+
+<p>The GCC developers would like to thank the numerous people that have
+contributed new features, improvements, bug fixes, and other changes as
+well as test results to GCC.
+This <a href="http://gcc.gnu.org/onlinedocs/gcc/Contributors.html">amazing
+group of volunteers</a> is what makes GCC successful.</p>
+
+<p>For additional information about GCC please refer to the
 <a href="../index.html">GCC project web site</a> or contact the
 <a href="mailto:gcc@gcc.gnu.org">GCC development mailing list</a>.</p>
+
+<p>To obtain GCC please use <a href="../mirrors.html">our mirror sites</a>,
+one of the <a href="http://www.gnu.org/order/ftp.html">GNU mirror sites</a>,
+or <a href="../cvs.html">our CVS server</a>.</p>
 
 </body>
 </html>
