--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -16,6 +16,30 @@
      versions.  -->
 
 <ul>
+  <li>GCC 3.3 manuals:
+  <ul>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.3/gcc/">GCC
+         3.3 Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.3/gcc.ps.gz">also
+         in PostScript</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.3/g77/">GCC
+         3.3 G77 Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.3/g77.ps.gz">also
+         in PostScript</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.3/gcj/">GCC
+         3.3 GCJ Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.3/gcj.ps.gz">also
+         in PostScript</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.3/cpp/">GCC 
+         3.3 CPP Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.3/cpp.ps.gz">also
+         in PostScript</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.3/gnat_rm/">GCC
+         3.3 GNAT Reference Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.3/gnat_rm.ps.gz">also
+         in PostScript</a>)</li>
+  </ul></li>
+
   <li>GCC 3.2.2 manuals:
   <ul>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.2.2/gcc/">GCC
